fixed features button on mobile

--- a/style.css
+++ b/style.css
@@ -249,18 +249,18 @@ h1.hero-heading-break {
     margin-bottom: 35px;
 }
 
-.cta-button {
+.features-button {
     display: inline-block;
-    padding: 18px 50px;
+    padding: 18px 30px;
     background-color: #1E88E5;
     color: #FFFFFF;
     text-decoration: none;
     border-radius: 5px;
     font-weight: 300;
-    font-size: 1em;
+    font-size: 0.9em;
 }
 
-.cta-button:hover {
+.features-button:hover {
     background-color: #FFC107;
     color: #333333;
 }
